# symphony

rust/: Cargo.toml
rust/src/: cli.rs  lib.rs  logging.rs  main.rs  prompt.rs  ssh.rs  types.rs
rust/src/agent/: app_server.rs  mod.rs  protocol.rs  runner.rs  tools.rs
rust/src/config/: mod.rs  schema.rs  workflow.rs
rust/src/dashboard/: mod.rs  terminal.rs  web.rs
rust/src/orchestrator/: dispatch.rs  mod.rs  reconciliation.rs  retry.rs
rust/src/server/: api.rs  dashboard.rs  mod.rs  presenter.rs
rust/src/tracker/: linear.rs  memory.rs  mod.rs
rust/src/workspace/: hooks.rs  mod.rs  path_safety.rs
rust/static/: dashboard.css  dashboard.js  index.html
rust/tests/: agent_app_server.rs  agent_runner.rs  config_workflow.rs  core_types.rs  dashboard.rs  orchestrator.rs  prompt_builder.rs  server_api.rs  server_runtime.rs  ssh.rs  tracker.rs  workspace_manager.rs
